[gd_scene load_steps=14 format=2]

[ext_resource path="res://Code/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Graphics/Enemies/WaterWarrior.png" type="Texture" id=2]
[ext_resource path="res://Code/Enemies/WaterWarrior.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 11 )

[sub_resource type="AtlasTexture" id=2]
flags = 9
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 27 )

[sub_resource type="AtlasTexture" id=3]
flags = 9
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 27 )

[sub_resource type="AtlasTexture" id=4]
flags = 9
atlas = ExtResource( 2 )
region = Rect2( 160, 27, 32, 27 )

[sub_resource type="AtlasTexture" id=5]
flags = 9
atlas = ExtResource( 2 )
region = Rect2( 32, 27, 32, 27 )

[sub_resource type="AtlasTexture" id=6]
flags = 9
atlas = ExtResource( 2 )
region = Rect2( 64, 27, 32, 27 )

[sub_resource type="AtlasTexture" id=7]
flags = 9
atlas = ExtResource( 2 )
region = Rect2( 96, 27, 32, 27 )

[sub_resource type="AtlasTexture" id=8]
flags = 9
atlas = ExtResource( 2 )
region = Rect2( 128, 27, 32, 27 )

[sub_resource type="AtlasTexture" id=9]
flags = 9
atlas = ExtResource( 2 )
region = Rect2( 0, 27, 32, 27 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 1.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "attack_hold",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ) ],
"loop": false,
"name": "attack",
"speed": 15.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "anticipation",
"speed": 5.0
} ]

[node name="WaterWarrior" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="EnemyData" parent="." instance=ExtResource( 1 )]
deathShards = 2
maxHp = 3
blocking = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
frame = 1
playing = true
offset = Vector2( -2, 0 )

[node name="KnockbackArea" type="Area2D" parent="."]

[node name="AttackWindup" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackHold" type="Timer" parent="."]
one_shot = true
